--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -3,12 +3,13 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 80px;
 }
 
 .inner {
-  width: 75%;
-  max-width: 1320px;
-  margin: 0 auto;
-  color: white;
+  width: 100%;
+  max-width: 1280px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
