--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -3,92 +3,56 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5em 2.5em;
+  padding: 1.5rem 2.5rem;
   background-color: var(--gray950);
-  white-space: nowrap;
 }
 
 .logo,
 .pages,
-.buttons {
+.nav {
   flex: 1;
-  display: flex;
 }
 
-.logo a {
-  text-decoration-line: none;
+.logo {
   font-size: 1.5rem;
   font-weight: bold;
+  text-decoration-line: none;
   color: var(--gray300);
 }
 
 .pages {
-  justify-content: center;
-}
-
-.pages button {
-  margin: 0 1em;
-  font-size: 1.1rem;
-  font-weight: 500;
-  color: var(--gray600);
-}
-
-.pages button.clicked {
-  color: white;
-}
-
-.pages button:hover {
-  color: white;
-}
-
-.buttons {
-  justify-content: flex-end;
-  align-items: center;
-  position: relative;
-}
-
-.search,
-.profile,
-.study_button {
-  margin: 0 1em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.profile {
-  display: flex;
-  align-items: center;
-}
-
-.nickname {
-  margin-left: 0.5em;
-  font-size: 0.8rem;
-}
-
-.info_buttons {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--gray900);
-  padding: 0.8em 1.5em;
-  position: absolute;
-  margin-top: 0.6em;
-}
-
-.info_buttons li {
   text-align: center;
 }
 
-.button {
-  padding: 0.7em;
-  font-size: 0.8em;
+.page {
+  margin: 0 1rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-decoration-line: none;
+  color: var(--gray600);
 }
 
-.study_button {
-  padding: 0.9em 1.2em;
-  color: var(--gray950);
-  background-color: var(--primary);
+.page.clicked {
+  color: white;
+}
+
+.page:hover {
+  color: white;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+}
+
+.button {
+  padding: 0.7rem 1rem;
   font-size: 0.8rem;
   font-weight: 500;
+  text-decoration-line: none;
   border-radius: 4px;
+  color: var(--gray950);
+  background-color: var(--primary);
 }
