--- a/src/components/layout/UserInfo/UserInfo.module.css
+++ b/src/components/layout/UserInfo/UserInfo.module.css
@@ -1,27 +1,34 @@
+.user_info {
+  position: relative;
+}
+
 .profile {
   display: flex;
   align-items: center;
 }
 
 .nickname {
-  margin-left: 0.5em;
-  font-size: 0.8rem;
+  margin-left: 0.5rem;
+  font-size: 0.85rem;
 }
 
 .info_buttons {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--gray900);
-  padding: 0.8em 1.5em;
   position: absolute;
-  margin-top: 0.6em;
-}
-
-.info_buttons li {
-  text-align: center;
+  width: 8rem;
+  margin-top: 0.6rem;
+  background-color: var(--gray900);
 }
 
 .button {
-  padding: 0.7em;
-  font-size: 0.8em;
+  width: 100%;
+  padding: 0.8rem 0;
+  font-size: 0.8rem;
+}
+
+.button:hover {
+  background-color: rgba(52, 58, 64, 0.5);
+}
+
+.logout {
+  border-top: 1px var(--gray700) solid;
 }
