--- a/src/components/commons/Modal/Modal.module.css
+++ b/src/components/commons/Modal/Modal.module.css
@@ -3,9 +3,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 10;
-  background: #10111280;
+  background: #10111234;
 }
 
 .overlay {
