--- a/src/pages/ErrorPage/ServerError/ServerError.module.css
+++ b/src/pages/ErrorPage/ServerError/ServerError.module.css
@@ -1,10 +1,15 @@
 .container {
-  height: 100vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+.message {
+  margin-top: 0;
+  font-weight: 400;
 }
 
 .button {
