refactor: totalParticipant 컴포넌트에 useQuery 적용

--- a/src/components/home/TotalParticipant/TotalParticipant.module.css
+++ b/src/components/home/TotalParticipant/TotalParticipant.module.css
@@ -1,34 +1,37 @@
 .participant {
   display: flex;
   flex-direction: column;
-  padding-bottom: 1.3em;
+  justify-content: end;
+  height: 7rem;
   color: white;
 }
 
 .count_icon {
-  height: 2.6em;
-  gap: 0.7em;
   display: flex;
-  margin-bottom: 0.7em;
-  padding: 0 0.3em;
+  gap: 0.7rem;
+  height: 2.5rem;
+  margin-bottom: 0.7rem;
 }
 
 .count_box {
   display: flex;
-  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .text {
   flex: 1 1 70%;
+  margin: 0;
   font-size: 1.8rem;
   font-weight: 600;
 }
 
 .button {
   flex: 1 1 30%;
-  padding: 0.7em;
+  text-align: center;
+  padding: 0.7rem;
   font-size: 1rem;
   font-weight: 700;
+  text-decoration-line: none;
   border-radius: 4px;
   color: var(--gray950);
   background-color: var(--primary);
