--- a/src/components/home/Bookmark/Bookmark.module.css
+++ b/src/components/home/Bookmark/Bookmark.module.css
@@ -2,40 +2,35 @@
   color: white;
 }
 
-.detail,
-.rule {
-  margin: 0;
-}
-
 .count_info {
   display: flex;
   flex-direction: column;
-  padding: 0 1em;
-  padding-bottom: 1.3em;
+  padding: 0 1rem;
+  padding-bottom: 1.3rem;
 }
 
 .count_icon {
-  height: 2.6em;
-  gap: 0.7em;
   display: flex;
-  margin-bottom: 0.7em;
-  padding: 0 0.3em;
+  gap: 0.7rem;
+  height: 2.5rem;
+  margin-bottom: 0.7rem;
 }
 
 .count_box {
   display: flex;
-  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .text {
   flex: 1 1 70%;
+  margin: 0;
   font-size: 1.8rem;
   font-weight: 600;
 }
 
 .button {
   flex: 1 1 30%;
-  padding: 0.8em 0;
+  padding: 0.7rem 0;
   font-weight: 700;
   border-radius: 4px;
   color: var(--gray950);
@@ -46,40 +41,51 @@
   display: flex;
   justify-content: space-between;
   background-color: black;
-  padding: 2em 1em;
+  padding: 2rem 1rem;
 }
 
 .thumbnail {
-  width: 90%;
-  height: 15em;
-  padding: 0.5em;
+  flex-basis: 30%;
+  height: 15rem;
+  padding: 0.5rem;
   background-color: var(--gray900);
 }
 
 .detail_box {
-  width: 100%;
-  padding: 0 1em;
+  flex-basis: 40%;
+  padding: 0 1rem;
 }
 
 .users {
-  width: 90%;
+  flex-basis: 30%;
   display: flex;
   flex-direction: column;
+  row-gap: 0.4rem;
+  width: 100%;
 }
 
 .name {
   margin: 0;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.7rem;
   font-size: 1.2rem;
   font-weight: 500;
 }
 
-.detail {
-  margin-bottom: 0.3em;
+.info_box {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.3rem;
+  height: 100%;
+}
+
+.detail,
+.rule {
+  display: flex;
+  margin: 0;
 }
 
 .title {
-  margin-right: 0.5em;
+  margin-right: 0.5rem;
   font-weight: 500;
   font-size: 0.9rem;
   color: var(--gray300);
@@ -90,24 +96,20 @@
   color: var(--gray500);
 }
 
-.rule {
-  display: flex;
-}
-
 .rule_title {
-  flex: 1 1 20%;
+  margin-right: 0.5rem;
   font-weight: 500;
   font-size: 0.9rem;
   color: var(--gray300);
 }
 
 .rule_content {
-  flex: 1 1 80%;
+  flex: 1 1 0;
   display: -webkit-box;
-  overflow: hidden;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   white-space: pre-wrap;
+  overflow: hidden;
   font-size: 0.9rem;
   color: var(--gray500);
 }
@@ -115,17 +117,21 @@
 .list {
   display: flex;
   align-items: center;
-  margin: 0.2em 0;
-  padding: 0.6em;
+  width: 100%;
+  padding: 0.6rem;
   border-radius: 4px;
   background-color: var(--gray950);
 }
 
+.id,
 .nickname {
-  flex: 1 1 60%;
-  margin: 0;
   font-size: 0.9rem;
   color: var(--gray700);
+}
+
+.nickname {
+  flex: 1 1 0;
+  margin-left: 0.5rem;
 }
 
 .time {
