refactor: 북마크한 스터디룸의 참여자 필터하는 로직을 컴포넌트에서 분리

--- a/src/components/home/Bookmark/Bookmark.module.css
+++ b/src/components/home/Bookmark/Bookmark.module.css
@@ -139,6 +139,10 @@
   color: var(--gray700);
 }
 
+.list.active .id {
+  color: var(--primary);
+}
+
 .list.active .nickname {
   color: var(--primary);
 }
