--- a/src/components/share/ShareButton/ShareButton.module.css
+++ b/src/components/share/ShareButton/ShareButton.module.css
@@ -1,7 +1,8 @@
 .share_container {
   text-align: center;
   width: 100%;
-  padding-bottom: 5rem;
+  margin-top: 2rem;
+  padding-bottom: 4rem;
 }
 
 .share_container p {
