--- a/src/components/mypage/StudyTime/StudyTime.module.css
+++ b/src/components/mypage/StudyTime/StudyTime.module.css
@@ -17,6 +17,7 @@
 }
 
 .box {
+  flex-basis: 40%;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -40,6 +41,7 @@
 }
 
 .time_table {
+  flex-basis: 60%;
   width: 100%;
 }
 
